🚧 [tvdb] PoJo updates (at least, some)
Generated client code from swagger, and try to incorporate them
https://thetvdb.github.io/v4-api/

Since it changed quite hefty, unsure if we'll continue.

But there are nice changes... so the TvShow object has an episode
listing... and others

And they changed quite many things... IDs from int to Long/BigDecimal,
Lists into objects.... their API design is sh*t, not reusing existing
things. And to use the generated code 1:1 is too much work i guess...